# yams

./: .env  .gitignore  LICENSE  README.md  api.py  bake  db.py  db.setup.sql  db.sql  go.mod  go.sum  main.py  meta.py  models.py  pyproject.toml  scan.py  yams.py
app/: init.go
cmd/yams/: yams.go
db/: db.go  remote.go
media/: info.go  media.go  scan.go  scan_test.go  structs.go
music/: handlers.go  scan.go  types.go  utils.go  yams.go
music/cache/: cache.go
music/ui/: Player.js  Props.js  Settings.js  index.html  main.js  modals.js  stores.js  utils.js  vue.js
music/ui/app/: Player.js  Settings.js  main.js  modals.js
music/ui/components/: PlaylistListItem.js  SongTile.js
music/ui/tabs/: Albums.js  Artists.js  Folders.js  History.js  NowPlaying.js  Playlists.js  Songs.js  Years.js
music/ui/ui/: modals.js
server/: context.go  server.go
store/: db.go  mysql.go
test/: media_test.go  sample.m4a  scan_test.go  spotify_playlist.json  spotify_song.json  utils.go
test_data/: sample-mediainfo.xml
ui/: index.css  index.html  main.js  site.webmanifest  utils.js
ui/app/: Player.js  Props.js  main.js  primevue.js  utils.js  vue.js
ui/app/components/: AlbumList.js  Navigation.js  OnPlaylistBtn.js  PlaylistListItem.js  SongTile.js  SongTileCtxMenu.js
ui/app/stores/: playlist.js
ui/components/: AlbumListItem.js
ui/tabs/: Artists.js  History.js  Songs.js  Years.js
utils/: utils.go
web/: ip.go  server.go
yams/: __init__.py  api.py  app.py  db.py  logg.py  main.py  meta.py  models.py  routes.py  scan.py  yams.go
yams/ui/: index.css  index.html
(+47 files in other folders)
