[project]
name = "yams"
version = "0.2.0"
description = "Music Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "mutagen>=1.47.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["./"]
include = ["yams"]

[tool.setuptools.package-data]
yams = ["ui/**"]

[project.scripts]
yams = "yams.main:main"
