[project]
name = "yams"
version = "0.2.3"
description = "Music Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.1",
    "mutagen>=1.47.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["./"]
include = ["yams"]

[tool.setuptools.package-data]
yams = ["ui/**"]

[project.scripts]
yams = "yams.main:main"
